syntax = "proto3";

package link_api;

import "link/domain/link/link.proto";

option go_package = "github.com/batazor/shortlink/internal/services/api/application/http-chi/controllers/link_api";

message addLinkRequest {
  string url = 1;
  string describe = 2;
}

message addLinkResponse {
  link.Link link = 1;
}

message getLinkRequest {
  string hash = 1;
  string describe = 2;
  string filter = 3;
}

message getListLinkRequest {
  string filter = 1;
}

message getListLinkResponse {
  repeated link.Link list = 1;
}

message deleteLinkRequest {
  string hash = 1;
}

message deleteLinkResponse {}
